# pywagglemsg

./: README.md  setup.cfg  setup.py  test.py
.github/workflows/: cicd.yaml
src/wagglemsg/: __init__.py
tests/: test_wagglemsg.py
wagglemsg/: __init__.py
