[metadata]
name = pywagglemsg
version = 0.1.0
author = Sean Shahkarami
author_email = sean.shahkarami@gmail.com
description = Official Waggle Python message module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/waggle-sensor/pywagglemsg
project_urls =
    Bug Tracker = https://github.com/waggle-sensor/pywagglemsg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
