[metadata]
name = pywagglemsg
version = 0.3.0rc0
author = Sean Shahkarami
author_email = sean.shahkarami@gmail.com
description = Official Waggle Python message module.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/waggle-sensor/pywagglemsg
project_urls =
    Bug Tracker = https://github.com/waggle-sensor/pywagglemsg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
